--- a/src/style/2.FlexboxGrid/FlexWrap/_1.class.scss
+++ b/src/style/2.FlexboxGrid/FlexWrap/_1.class.scss
@@ -1,18 +1,9 @@
 @use "../../setting" as *;
 
 /* Flex Wrap */
+// flex-wrap is same as atomic
 @if $Basic {
   // /*x
-  @mixin flex-wrap($rwd: null) {
-    @if $rwd==null {
-      @include flex-wrap(wrap);
-    } @else {
-      @media (min-width: $rwd) {
-        @include flex-wrap(wrap);
-      }
-    }
-  }
-
   @mixin flex-wrap-reverse($rwd: null) {
     @if $rwd==null {
       @include flex-wrap(wrap-reverse);
@@ -38,9 +29,6 @@
 
 @if $Rwd {
   // /*x
-  @mixin sm\:flex-wrap {
-    @include flex-wrap($sm);
-  }
 
   @mixin sm\:flex-wrap-reverse {
     @include flex-wrap-reverse($sm);
@@ -48,10 +36,6 @@
 
   @mixin sm\:flex-nowrap {
     @include flex-nowrap($sm);
-  }
-
-  @mixin md\:flex-wrap {
-    @include flex-wrap($md);
   }
 
   @mixin md\:flex-wrap-reverse {
@@ -62,10 +46,6 @@
     @include flex-nowrap($md);
   }
 
-  @mixin lg\:flex-wrap {
-    @include flex-wrap($lg);
-  }
-
   @mixin lg\:flex-wrap-reverse {
     @include flex-wrap-reverse($lg);
   }
@@ -74,20 +54,12 @@
     @include flex-nowrap($lg);
   }
 
-  @mixin xl\:flex-wrap {
-    @include flex-wrap($xl);
-  }
-
   @mixin xl\:flex-wrap-reverse {
     @include flex-wrap-reverse($xl);
   }
 
   @mixin xl\:flex-nowrap {
     @include flex-nowrap($xl);
-  }
-
-  @mixin \2xl\:flex-wrap {
-    @include flex-wrap($\2xl);
   }
 
   @mixin \2xl\:flex-wrap-reverse {
